Fix assign control alignment (lost from theme)

--- a/sass/src/column/Assignments.scss
+++ b/sass/src/column/Assignments.scss
@@ -6,6 +6,7 @@
 
 .assign-control-item {
     flex: 1;
+    text-align: center;
 
     .menu-trigger {
         cursor: pointer;
